--- a/nginx.conf
+++ b/nginx.conf
@@ -51,5 +51,21 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
 
+        location /blackjack/socket.io/ {
+            proxy_pass http://blackjack;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /api/blackjack/ {
+            proxy_pass http://blackjack/api/blackjack/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
     }
 } 
