Adicão do blackjack funcionando de forma básica

--- a/nginx.conf
+++ b/nginx.conf
@@ -51,13 +51,18 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
 
+        # Corrigido - Adicionado caminho completo no proxy_pass
         location /blackjack/socket.io/ {
-            proxy_pass http://blackjack;
+            proxy_pass http://blackjack/socket.io/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
+            proxy_read_timeout 3600s;  # Aumentar timeout para WebSockets
+            proxy_send_timeout 3600s;  # Aumentar timeout para WebSockets
+            # Debug headers
+            add_header X-Debug-Message "Blackjack WebSocket connection" always;
         }
 
         location /api/blackjack/ {
@@ -66,6 +71,5 @@ http {
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
         }
-
     }
 } 
