--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
+    "axios": "^1.8.1",
     "bcryptjs": "^3.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
@@ -15,6 +16,7 @@
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "socket.io": "^4.7.4",
+    "socket.io-client": "^4.8.1",
     "ws": "^8.16.0"
   },
   "devDependencies": {
