--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -118,6 +118,41 @@ services:
     networks:
       - app-network
 
+  # Seção do Blackjack atualizada
+  blackjack:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile.blackjack
+    env_file: ./backend/.env
+    deploy:
+      replicas: 1 # Reduzir para 1 réplica durante testes
+      update_config:
+        parallelism: 1
+        delay: 30s
+        order: start-first
+        failure_action: rollback
+      restart_policy:
+        condition: on-failure
+        delay: 5s
+        max_attempts: 3
+        window: 120s
+    environment:
+      DATABASE_URL: "postgres://postgres:Patinho123@my-dungeon:5432/postgres"
+      PORT: "3003"
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:3003/health" ]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 10s
+    ports:
+      - "3003:3003" # Expõe a porta diretamente para debug
+    depends_on:
+      my-dungeon:
+        condition: service_healthy
+    networks:
+      - app-network
+
 networks:
   app-network:
     driver: bridge
